TypeChecking/test_cases/bad/no-main-1.cl
class Main {
  mainiac( ) : Object { 5 } ; 
} ;

class Foozle {
  main ( ) : Object { 5 } ;
} ;
